fix hover color sub menu shiftnav

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -81,6 +81,11 @@ a.nav-link {
         background: #dc3545
 }   
 
+a.shiftnav-target:hover {
+    background-color: #0095d5 !important;
+    color: #fff !important;
+}
+
 .bg-light {
     background-color: #343a40!important;
 } 
